--- a/codelabs-homes-app-start/src/index.html
+++ b/codelabs-homes-app-start/src/index.html
@@ -13,5 +13,6 @@
 <body>
   <app-root></app-root>
   <router-outlet></router-outlet>
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </body>
 </html>
